--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "forever": "^4.0.3",
