--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "forever": "^4.0.3",
     "multiple-select": "^1.7.0",
     "mysql": "^2.18.1"
