--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
